Refactor RenderPass to CommandBuffer
This commit introduces a new `CommandBuffer` abstraction to replace `RenderPass`.
This change allows for more flexible and fine-grained control over the rendering pipeline.

Key changes:
- Renamed `RenderPass` to `Pass` and introduced `DrawCall` to represent individual draw operations within a pass.
- Introduced `CommandBuffer` to represent a sequence of `GpuCommand`s.
- `PassCompiler` is a new utility to compile a list of `Pass`es into a `CommandBuffer`.
- `Engine.submit()` is now `Engine.submitCommands()` and accepts a `CommandBuffer`.
- `Renderer.render()` is now `Renderer.execute()` and accepts a `CommandBuffer`.
- `Uniform.Sampler` is now `Uniform.Sampler2D` and uses `Image2D` instead of `TextureAsset` and `TextureParameters` directly.
- Introduced `Image2D` sealed interface with `FromAsset` and `RenderTarget` implementations to represent different types of 2D images.
- Removed `Texture` record as it's replaced by `Image2D`.
- `GlesBinder` now has a `resetTextureUnits()` method.
- `GlesGpuObjectManager` now caches `Image2D` instead of `Uniform.Sampler`.
- `GlesRenderer` now processes `GpuCommand`s from a `CommandBuffer`.
- Updated `ShaderRunnerPlugin` to use the new `CommandBuffer` and `Pass` APIs.